# learn-opengl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cspell.config.yaml  justfile  main.cpp  odinfmt.json  ols.json  project-words.txt
docs/: CONSIDERATIONS.md
include/: camera.h  mesh.hpp  model.hpp  openGLCommon.hpp  shader.h  shader.hpp  texture.hpp  vertex.hpp
include/camera/: Camera.h  Camera.hpp  FPSCamera.h  FPSCamera.hpp  FlyingCamera.h  FlyingCamera.hpp
include/colors/: Color.hpp
include/lights/: Attenuation.hpp  DirectionalLight.hpp  Light.hpp  PointLight.hpp  SpotLight.hpp  WhiteLight.hpp
include/materials/: Emerald.hpp  Jade.hpp  Material.hpp  Obsidian.hpp  Pearl.hpp  Ruby.hpp
include/models/: Box.hpp
shaders/frag/: blinn_displacement.frag  blinn_displacement_steep.frag  blinn_parallax_occlusion_mapping.frag  blinn_phong_material_diffuse_sampled_specular_calculated.frag  blinn_phong_material_diffuse_specular_calculated_gamma_corrected_multilight.frag  blinn_phong_shadow.frag  blinn_phong_shadow_2.frag  blinn_phong_shadow_3.frag  blinn_phong_shadow_4.frag  bloom_lighting.frag  blue.frag  blur_kernel.frag  blur_separated.frag  brdf_integration.frag  checkerboard.frag  checkerboard_2d.frag  checkerboard_2d_blinn_phong.frag  clouds.frag  convolute_skybox.frag  deferred_shading.frag  deferred_shading_volumes.frag  depth.frag  depth_linear.frag  depth_r.frag  diffuse.frag  double_tex.frag  double_tex_color.frag  edge_kernel.frag  equirectangluar_to_cubemap.frag  exercise_04_03.frag  exercise_04_04.frag  exercise_04_06.frag  flat_tex.frag  flat_tex_greyscale.frag  flat_tex_invert.frag  g_buffer.frag  g_buffer_debug.frag  gen_noise.frag  green.frag  hdr.frag  (+53 more)
shaders/fragment/: blue.frag  colorIn.frag  coloredTexture.frag  doubleTexture.frag  litMaterial.frag  litMaterialTextureMap.frag  litMaterialTextureMapWithEmission.frag  litOrange.frag  modelDiffuse.frag  oscillatingGreen.glsl  positionColor.frag  textured.frag
shaders/geom/: depth_cube.geom  draw_normal.geom  explode.geom  house.geom  tex_3d.geom
shaders/vert/: basic.vert  basic_palette.vert  draw_normal.vert  house_color.vert  instanced_color.vert  normal_mapped.vert  pbr.vert  pos.vert  pos_and_color.vert  pos_as_color.vert  pos_color.vert  pos_color_tex.vert  pos_color_tex_tranform.vert  pos_model.vert  pos_model_transform.vert  pos_normal_transform.vert  pos_tex.vert  pos_tex_instanced.vert  pos_tex_normal_transform.vert  pos_tex_normal_transform_instanced.vert  pos_tex_normal_transform_light.vert  pos_tex_normal_transform_vs_out.vert  pos_tex_pv.vert  pos_tex_transform.vert  pos_transform.vert  pos_uniform_offset.vert  pos_upside_down.vert  ssao.vert  ssao_geometry.vert  text.vert  ubo_transform.vert  world_position.vert
shaders/vertex/: horizontalOffset.vert  identityColorOut.vert  identityOut.vert  identityTextured.vert  modelViewProjection.vert  modelViewProjectionWithNormal.vert  modelViewProjectionWithNormalAndTex.vert  upsideDown.glsl
src/: constants.odin  input.odin  main.odin  tableaus.odin  texture.odin
src/font/: font.odin
src/input/: input_state.odin
src/mesh/: cube.odin  rectangle.odin  triangle.odin
src/noise/: noise.odin
src/primitives/: cross_imposter.odin  cube.odin  cubemap.odin  full_screen.odin  (+6 more)
(+126 files in other folders)
